small fixes - update twitter bot image - give top & bottom margins to .button-container rather than to buttons - make header font even smaller on mobile

--- a/style.css
+++ b/style.css
@@ -230,11 +230,11 @@ body {
 
 @media screen and (max-width:499px) {
   #home header h1 {
-    font-size: 45px;
+    font-size: 40px;
     margin-bottom: -21px;
   }
   #home header .subtitle-two {
-    margin-right: 145px;
+    margin-right: 113px;
   }
 }
 
@@ -408,6 +408,8 @@ body {
 
 .card .button-container {
   text-align: center;
+  margin-top: -4px;
+  margin-bottom: 13px;
 }
 
 .card .button-container-inner {
@@ -425,8 +427,6 @@ body {
   border: none;
   border-radius: 1px;
   padding: 10px 18px;
-  margin-top: -4px;
-  margin-bottom: 13px;
 
   -webkit-transition: all 0.4s;
   -moz-transition: all 0.4s;
